--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,8 @@
-<div class="row">
-  <div class="col-12">
+<div class="row justify-content-center login-form">
+  <div class="col-6">
     <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+
+      <h3 class="mb-4">Log In</h3>
 
       <div class="row" *ngIf="authError">
         <div class="col-12 alert alert-danger">{{ authError?.message }}</div>
@@ -13,17 +15,17 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row my-3">
         <div class="col-12">
           <label for="password">Password</label>
           <input ngModel #password="ngModel" name="password" type="password" class="form-control">
         </div>
       </div>
 
-      <div class="row mt-2">
+      <div class="row mt-4">
         <div class="col-12">
-          <button type="button" class="btn btn-secondary mr-4" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary px-5" (click)="sendModal()">Log-In</button>
+          <button type="button" class="btn btn-secondary mr-4" [routerLink]="['/home']" routerLinkActive="router-link-active" >Back Home</button>
+          <button type="submit" class="btn btn-primary px-5">Log-In</button>
         </div>
       </div>
 
