--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,11 +1,5 @@
-/* .container-fluid {
-  margin: 0;
-  padding-top: 100px;
+.signup-form {
   height: 100vh;
+  padding-top: 8%;
   color: white;
 }
-
-.form-btn {
-  text-align: end;
-}
- */
