--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row video-header">
   <div class="col-12">
     <div class="embed-responsive embed-responsive-16by9">
-      <video id="videoMuted" class="embed-responsive-item" [muted]="isMuted" autoplay loop>
-        <source [src]="getHeaderEmbedUrl()"  type="video/mp4">
+      <video class="embed-responsive-item" [muted]="isMuted" autoplay loop>
+        <source [src]="videoHeader"  type="video/mp4">
       </video>
     </div>
   </div>
@@ -23,16 +23,16 @@
         <h2>Action/Adventure</h2>
       </div>
       <div class="col-3 btn-movies">
-        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/action">View All</a>
-        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All</a>
+        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/action">View All Actions / Adventures</a>
+        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All Actions / Adventures</a>
       </div>
     </div>
     <div class="card-deck  justify-content-sm-around">
-      <ul class="videoList" *ngFor="let httpMovie of getFilterMovies('action') | slice:0:5;">
+      <ul class="videoList" *ngFor="let httpMovie of getFilterMovies('action') | slice:0:5; let i=index">
         <li>
           <div class="card text-light card-movies">
             <a class="videos" href="#moviesModal{{httpMovie.id}}" data-toggle="modal"  data-backdrop="static" data-keyboard="false">
-              <img [src]="httpMovie.image" alt="angel has fallen" class="card-img-top img-fluid card-images">
+              <img #stopMovie [src]="httpMovie.image" [alt]="httpMovie.name" class="card-img-top img-fluid card-images">
               <div class="card-body">
                 <h4 class="card-title">{{httpMovie.name}}</h4>
               </div>
@@ -43,11 +43,11 @@
               <div class="modal-content bg-dark text-light">
                 <div class="modal-header">
                   <h3 class="modal-title">{{httpMovie.name}}</h3>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="close" (click)="stopMovie()"><span class="text-light" aria-hidden="true">&times;</span></button>
+                  <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                   <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                    <iframe class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" allowfullscreen #stopMovie></iframe>
+                    <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
                 </div>
@@ -68,8 +68,8 @@
         <h2>Comedy</h2>
       </div>
       <div class="col-3 btn-movies">
-        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/comedy">View All</a>
-        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All</a>
+        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/comedy">View All Comedies</a>
+        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All Comedies</a>
       </div>
     </div>
     <div class="card-deck justify-content-around">
@@ -77,7 +77,7 @@
         <li>
           <div class="card text-light card-movies">
             <a class="videos" href="#moviesModal{{httpMovie.id}}" data-toggle="modal"  data-backdrop="static" data-keyboard="false">
-              <img [src]="httpMovie.image" alt="angel has fallen" class="card-img-top img-fluid card-images">
+              <img [src]="httpMovie.image" [alt]="httpMovie.name" class="card-img-top img-fluid card-images">
               <div class="card-body">
                 <h4 class="card-title">{{httpMovie.name}}</h4>
               </div>
@@ -88,16 +88,16 @@
               <div class="modal-content bg-dark text-light">
                 <div class="modal-header">
                   <h3 class="modal-title">{{httpMovie.name}}</h3>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="close" (click)="stopMovie()"><span class="text-light" aria-hidden="true">&times;</span></button>
+                  <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                   <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                    <iframe class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" allowfullscreen #stopMovie></iframe>
+                    <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal" (click)="stopMovie()">Back</button>
+                  <button (click)="stopMovie()" type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal">Back</button>
                 </div>
               </div>
             </div>
@@ -113,8 +113,8 @@
         <h2>Drama</h2>
       </div>
       <div class="col-3 btn-movies">
-        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/drama">View All</a>
-        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All</a>
+        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/drama">View All Dramas</a>
+        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All Dramas</a>
       </div>
     </div>
     <div class="card-deck  justify-content-around">
@@ -122,7 +122,7 @@
         <li>
           <div class="card text-light card-movies">
             <a class="videos" href="#moviesModal{{httpMovie.id}}" data-toggle="modal"  data-backdrop="static" data-keyboard="false">
-              <img [src]="httpMovie.image" alt="angel has fallen" class="card-img-top img-fluid card-images">
+              <img [src]="httpMovie.image" [alt]="httpMovie.name" class="card-img-top img-fluid card-images">
               <div class="card-body">
                 <h4 class="card-title">{{httpMovie.name}}</h4>
               </div>
@@ -133,17 +133,16 @@
               <div class="modal-content bg-dark text-light">
                 <div class="modal-header">
                   <h3 class="modal-title">{{httpMovie.name}}</h3>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="close" (click)="stopMovie()"><span class="text-light" aria-hidden="true">&times;</span></button>
+                  <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                   <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                    <iframe class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)"
-                      allowfullscreen #stopMovie></iframe>
+                    <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal" (click)="stopMovie()">Back</button>
+                  <button (click)="stopMovie()" type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal">Back</button>
                 </div>
               </div>
             </div>
@@ -159,8 +158,8 @@
         <h2>Horror</h2>
       </div>
       <div class="col-3 btn-movies">
-        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/horror">View All</a>
-        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All</a>
+        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/horror">View All Horrors</a>
+        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All Horrors</a>
       </div>
     </div>
     <div class="card-deck  justify-content-around">
@@ -168,7 +167,7 @@
         <li>
           <div class="card text-light card-movies">
             <a class="videos" href="#moviesModal{{httpMovie.id}}" data-toggle="modal"  data-backdrop="static" data-keyboard="false">
-              <img [src]="httpMovie.image" alt="angel has fallen" class="card-img-top img-fluid card-images">
+              <img [src]="httpMovie.image" [alt]="httpMovie.name" class="card-img-top img-fluid card-images">
               <div class="card-body">
                 <h4 class="card-title">{{httpMovie.name}}</h4>
               </div>
@@ -179,17 +178,16 @@
               <div class="modal-content bg-dark text-light">
                 <div class="modal-header">
                   <h3 class="modal-title">{{httpMovie.name}}</h3>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="close" (click)="stopMovie()"><span class="text-light" aria-hidden="true">&times;</span></button>
+                  <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                   <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                    <iframe class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)"
-                      allowfullscreen #stopMovie></iframe>
+                    <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal" (click)="stopMovie()">Back</button>
+                  <button (click)="stopMovie()" type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal">Back</button>
                 </div>
               </div>
             </div>
@@ -205,8 +203,8 @@
         <h2>Sci-Fi</h2>
       </div>
       <div class="col-3 btn-movies">
-        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/sci-fi">View All</a>
-        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All</a>
+        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/sci-fi">View All Sci-Fi</a>
+        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All Sci-Fi</a>
       </div>
     </div>
     <div class="card-deck  justify-content-around">
@@ -214,7 +212,7 @@
         <li>
           <div class="card text-light card-movies">
             <a class="videos" href="#moviesModal{{httpMovie.id}}" data-toggle="modal"  data-backdrop="static" data-keyboard="false">
-              <img [src]="httpMovie.image" alt="angel has fallen" class="card-img-top img-fluid card-images">
+              <img [src]="httpMovie.image" [alt]="httpMovie.name" class="card-img-top img-fluid card-images">
               <div class="card-body">
                 <h4 class="card-title">{{httpMovie.name}}</h4>
               </div>
@@ -225,17 +223,16 @@
               <div class="modal-content bg-dark text-light">
                 <div class="modal-header">
                   <h3 class="modal-title">{{httpMovie.name}}</h3>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="close" (click)="stopMovie()"><span class="text-light" aria-hidden="true">&times;</span></button>
+                  <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                   <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                    <iframe class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)"
-                      allowfullscreen #stopMovie></iframe>
+                    <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal" (click)="stopMovie()">Back</button>
+                  <button (click)="stopMovie()" type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal">Back</button>
                 </div>
               </div>
             </div>
@@ -251,8 +248,8 @@
         <h2>Thriller</h2>
       </div>
       <div class="col-3 btn-movies">
-        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/thriller">View All</a>
-        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All</a>
+        <a *ngIf="user" role="button" class="btn btn-outline-light btn-sm" routerLink="/thriller">View All Thrillers</a>
+        <a *ngIf="!user" role="button" class="btn btn-outline-light btn-sm" routerLink="/login">View All Thrillers</a>
       </div>
     </div>
     <div class="card-deck  justify-content-around">
@@ -260,7 +257,7 @@
         <li>
           <div class="card text-light card-movies">
             <a class="videos" href="#moviesModal{{httpMovie.id}}" data-toggle="modal"  data-backdrop="static" data-keyboard="false">
-              <img [src]="httpMovie.image" alt="angel has fallen" class="card-img-top img-fluid card-images">
+              <img [src]="httpMovie.image" [alt]="httpMovie.name" class="card-img-top img-fluid card-images">
               <div class="card-body">
                 <h4 class="card-title">{{httpMovie.name}}</h4>
               </div>
@@ -271,17 +268,16 @@
               <div class="modal-content bg-dark text-light">
                 <div class="modal-header">
                   <h3 class="modal-title">{{httpMovie.name}}</h3>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="close" (click)="stopMovie()"><span class="text-light" aria-hidden="true">&times;</span></button>
+                  <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                   <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
-                    <iframe class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)"
-                      allowfullscreen #stopMovie></iframe>
+                    <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal" (click)="stopMovie()">Back</button>
+                  <button (click)="stopMovie()" type="button" class="btn btn-sm btn-outline-light mx-auto px-5" data-dismiss="modal">Back</button>
                 </div>
               </div>
             </div>
