--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,10 @@
 <footer>
-  <div class="row">
-    <div class="col">
-      <p class="text-center small">Copyright &copy; 2020, RodFox. All rights reserved.</p>
+  <hr>
+  <div class="row justify-content-center pb-3">
+    <div class="col-6 text-center">
+      <img src="./assets/images/rodfox-logo-dark.png" alt="rodfox logo" class="logo">
+      <p class="my-0 small">Copyright &copy; 2020, RodFox. All rights reserved.</p>
+      <a href="mailto:rodfox.developers@gmail.com" class="text-center small">rodfox.developers@gmail.com</a>
     </div>
   </div>
 </footer>
