--- a/src/app/shared/toolbar/toolbar.component.css
+++ b/src/app/shared/toolbar/toolbar.component.css
@@ -33,11 +33,10 @@ color:white;
 }
 
 .videoList {
-list-style-type: none;
-
-
+  list-style-type: none;
 }
 
 .video-search {
   padding: 8% 0 0;
+  background-color: black;
 }
