--- a/src/app/genres/thriller/thriller.component.html
+++ b/src/app/genres/thriller/thriller.component.html
@@ -26,7 +26,10 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="close" (click)="stopMovie()"><span class="text-light" aria-hidden="true">&times;</span></button>
               </div>
               <div class="modal-body">
-                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                  <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
                   <iframe class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)"
                     allowfullscreen #stopMovie></iframe>
                 </div>
