--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,7 +46,10 @@
                   <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                    <div class="spinner-border" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
                     <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
@@ -91,7 +94,10 @@
                   <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                    <div class="spinner-border" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
                     <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
@@ -136,7 +142,10 @@
                   <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                    <div class="spinner-border" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
                     <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
@@ -181,7 +190,10 @@
                   <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                    <div class="spinner-border" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
                     <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
@@ -226,7 +238,10 @@
                   <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                    <div class="spinner-border" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
                     <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
@@ -271,7 +286,10 @@
                   <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
-                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                  <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                    <div class="spinner-border" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
                     <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(httpMovie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <p class="my-4">{{httpMovie.content}}</p>
