--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -65,7 +65,10 @@
                     <button (click)="stopMovie()" type="button" class="close" data-dismiss="modal" aria-label="close"><span class="text-light" aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
-                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half text-center">
+                      <div class="spinner-border" role="status">
+                        <span class="sr-only">Loading...</span>
+                      </div>
                       <iframe #stopMovie class="embed-responsive-item" [src]="getEmbedUrl(movie.video)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <p class="my-4">{{movie.content}}</p>
