--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -3,3 +3,12 @@
   padding-top: 10%;
   color: white;
 }
+
+
+/* MEDIA QUERY */
+
+@media only screen and (max-width: 600px) {
+  .login-form {
+    padding-top: 25%;
+  }
+}
