--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,13 +22,12 @@
         </div>
       </div>
 
-      <div class="row mt-4">
+      <div class="row mt-2 mb-4">
         <div class="col-12">
-          <button type="button" class="btn btn-secondary mr-4" [routerLink]="['/home']" routerLinkActive="router-link-active" >Back Home</button>
-          <button type="submit" class="btn btn-primary px-5">Log-In</button>
+          <button type="submit" class="btn btn-primary px-5 my-3">Log-In</button>
         </div>
       </div>
-
     </form>
+    <a type="button" [routerLink]="['/home']" routerLinkActive="router-link-active" >Back Home</a>
   </div>
 </div>
