--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -35,11 +35,11 @@
           <label>Confirm Password</label>
           <input name="password" type="password" class="form-control">
         </div>
-        <div class="col-md-12 form-btn">
-          <button type="button" class="btn btn-secondary mr-4" [routerLink]="['/home']" routerLinkActive="router-link-active" >Back Home</button>
+        <div class="col-md-12 form-btn mb-3">
           <button type="submit" class="btn btn-primary px-5">Submit</button>
         </div>
       </div>
+      <a role="button" [routerLink]="['/home']" routerLinkActive="router-link-active" >Back Home</a>
     </form>
     <div class="col-md-12 form-btn">
       <button *ngIf="user" type="button" class="btn btn-secondary mr-4" [routerLink]="['/home']" routerLinkActive="router-link-active" >Back Home</button>
