--- a/src/app/genres/horror/horror.component.css
+++ b/src/app/genres/horror/horror.component.css
@@ -26,3 +26,12 @@ color:white;
 list-style-type: none;
 padding: 0;
 }
+
+
+/* MEDIA QUERY */
+
+@media only screen and (max-width: 600px) {
+  section {
+    padding-top: 25%;
+  }
+}
