--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,21 +1,13 @@
-section {
-  padding-top: 100px;
-}
-
 .card-movies {
   background-color: black;
   text-align: center;
-  max-width: 200px;
-  height: 400px;
+  max-width: 150px;
   object-fit: cover;
-}
-
-.btn-movies {
-  text-align: end;
 }
 
 .card-title {
   margin: 0 1%;
+  font-size: 0.8em;
 }
 
 .videos, .videos:hover {
@@ -23,15 +15,24 @@ color:white;
 }
 
 .videoList {
-list-style-type: none;
-padding: 0;
+  list-style-type: none;
+}
+
+.video-search {
+  padding-top: 10%;
+  background-color: black;
+  height: 100%;
 }
 
 
 /* MEDIA QUERY */
 
 @media only screen and (max-width: 600px) {
-  section {
+  .video-search {
     padding-top: 25%;
+  }
+
+  .btn-bh {
+    margin-bottom: 5%;
   }
 }
